# workout

backend/: pyproject.toml
backend/api/: .env  database.py  deps.py  main.py  models.py  workout_app.db
backend/api/routers/: auth.py  routines.py  workouts.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/component/: ProtectedRoute.js
frontend/src/app/context/: AuthContext.js
frontend/src/app/login/: page.js
